--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@elizaos/plugin-starknet": "0.1.9",
     "@tavily/core": "0.0.2",
     "amqplib": "0.10.5",
-    "better-sqlite3": "11.5.0",
+    "sqlite3": "^5.1.6",
     "fs": "0.0.1-security",
     "net": "1.0.2",
     "path": "0.12.7",
