--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ts-node": "10.9.2",
     "tsup": "8.3.5",
     "typescript": "5.6.3",
-    "pm2": "5.4.3" 
+    "pm2": "5.4.3",
+    "@types/node": "^20.11.0"
   }
 }
