--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "resolveJsonModule": true,
+    "types": ["node"],
     "noImplicitAny": false,
     "allowJs": true,
     "checkJs": false,
